--- a/dataset/ml-models.ipynb
+++ b/dataset/ml-models.ipynb
@@ -633,6 +633,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print models parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
